--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1,5 +1,6 @@
 html {
     scroll-behavior: smooth;
+    margin-top: 80px;
 }
 
 body {
@@ -9,10 +10,11 @@ body {
     -o-background-size: cover;
     background-size: cover;
     font-size: 16px;
+    background-color:black;
 }
 
 main {
-    width: 50%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -20,6 +22,7 @@ p {
     font-size: 1.8em;
     text-align: center;
     color:black;
+    margin: 0 auto;
 }
 
 ul {
@@ -28,7 +31,7 @@ ul {
     justify-content: space-evenly;
 }
 
-a:link, a:visited {
+#target:link, #target:visited {
     background-color: #f44336;
     color: white;
     padding: 14px 25px;
@@ -37,8 +40,8 @@ a:link, a:visited {
     display: inline-block;
 }
   
-a:hover, a:active {
-    background-color: red;
+#target:hover, #target:active {
+    filter: invert(100%);
 }
 
 li {
@@ -46,5 +49,32 @@ li {
 }
 
 .coolguy {
+    border-style: solid;
+    border-color: grey;
+    border-width: 5px;
     background-color: white;
+    padding:20px;
+    margin-top:50px;
+}
+
+#choices {
+    border-style: solid;
+    border-color: grey;
+    border-width: 5px;
+    background-color: white;
+    padding: 20px;
+    margin-top: 50px;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 13%;
+}
+
+audio {
+    width:100%;
+    float: bottom;
+    margin-top: 75px;
 }
